updated from master

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1{
     text-size-adjust: 60px;
 }
 h2{
-    color: blue;
+    color: yellow;
     text-align: center;
     text-size-adjust: 60px;
 }
